2012-05-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/header_f2b.png: Changed image size to 3000px width.
	
	Merged from trunk.

2012-05-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css: Fixed background color in login 
	splash inputs.

2012-05-04 Sancho Lerena <slerena@artica.es>

	* extensions/ssh_gateway.php
	extensions/ssh_gateway
	extensions/ssh_gateway/secure_console.png: New extension for SSH
	and telnet connectivity with remote devices.

	* include/styles/pandora.css: Small fixes to style.

2012-05-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css
	images/header_f2.png: Modified header image with 3000px width. 

2012-05-03  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php
	include/functions_ui.php
	include/functions_agents.php
	operation/agentes/estado_ultimopaquete.php
	operation/agentes/estado_generalagente.php
	operation/agentes/estado_monitores.php : Fixed several 
	title text in force icon (green donut)

	* operation/menu.php: Fixed missed "Edit my user" option

	Merged from trunk

2012-05-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/pandora.css: fixed ".is_submenu2 li" because there
	is not ":".
	
	* include/functions_reporting.php: cleaned source code style.
	
	* godmode/reporting/reporting_builder.php: removed a PHP notice
	message about a uninicialized var.
	
	* godmode/reporting/graphs.php: fixed lost icon in the header bar
	in this page.

2012-05-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/menu.css: fixed bad colour name "#grey" for correct
	colour name "grey".
	
	* include/constants.php: added constants for backup.

2012-05-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/ver_agente.php: Changed way of truncate agent 
	name in header due to bad visualization if agent name has entities.

2012-05-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
